# testal

./: .testal.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/testal/: __init__.py  cli.py  config.py
src/testal/analyzer/: ast_parser.py  models.py
tests/: test_ast_parser.py  test_cli.py  test_config.py
tests/fixtures/: sample_module.py
