[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testal"
version = "0.1.0"
description = "CLI tool for LLM-powered pytest generation and commit messages"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "litellm>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
testal = "testal.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]