[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testal"
version = "0.1.0"
description = "LLM-powered pytest test generation and commit message CLI tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Evan Sun", email = "evan.sun.ca@gmail.com" },
]
keywords = ["testing", "pytest", "llm", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1",
    "litellm>=1.40",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
testal = "testal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/testal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=testal --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["testal"]

[tool.mypy]
python_version = "3.11"
strict = true